[gd_scene load_steps=16 format=2]

[ext_resource path="res://script/ActionVBoxContainer.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resource/Zpix.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://resource/Zpix.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.541176, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0705882, 0.541176, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://resource/Zpix.ttf"

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="ActionVBoxContainer" type="VBoxContainer"]
margin_top = 286.0
margin_right = 850.0
margin_bottom = 710.0
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ChoiceHBoxContainer" type="HBoxContainer" parent="."]
margin_right = 850.0
margin_bottom = 24.0

[node name="ActionLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
text = "[行动 #1]"
__meta__ = {
"_editor_description_": ""
}

[node name="ChanceLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 204.0
margin_right = 308.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
text = "抽卡机会"
align = 1

[node name="ChancevalueLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 312.0
margin_right = 326.0
margin_bottom = 24.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
text = "0"
align = 1

[node name="SlashLabel1" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 330.0
margin_right = 344.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="CapacityLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 348.0
margin_right = 400.0
margin_bottom = 24.0
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
text = "能力"
align = 1

[node name="CapacityvalueLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 404.0
margin_right = 432.0
margin_bottom = 24.0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
text = "10"
align = 1

[node name="SlashLabel2" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 436.0
margin_right = 450.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|"
__meta__ = {
"_editor_description_": ""
}

[node name="DifficultyLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 454.0
margin_right = 506.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "困难"
align = 1

[node name="DifficultyvalueLabel" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 510.0
margin_right = 538.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "10"
align = 1

[node name="OvercomeButton" type="Button" parent="ChoiceHBoxContainer"]
margin_left = 640.0
margin_right = 734.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 10
size_flags_vertical = 4
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
disabled = true
enabled_focus_mode = 0
text = "克服[O]"
__meta__ = {
"_editor_description_": ""
}

[node name="SlashLabel3" type="Label" parent="ChoiceHBoxContainer"]
margin_left = 738.0
margin_right = 752.0
margin_bottom = 24.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "|"
__meta__ = {
"_editor_description_": ""
}

[node name="PassButton" type="Button" parent="ChoiceHBoxContainer"]
margin_left = 756.0
margin_right = 850.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "放弃[P]"

[node name="ActionMarginContainer" type="MarginContainer" parent="."]
margin_top = 28.0
margin_right = 850.0
margin_bottom = 228.0
size_flags_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ActionMarginContainer"]
margin_right = 850.0
margin_bottom = 200.0
size_flags_vertical = 3
color = Color( 1, 1, 1, 0.117647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardGridContainer" type="GridContainer" parent="ActionMarginContainer"]
margin_right = 850.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 2
columns = 6
